Added api handling

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,32 @@
-VISTERIA_API_KEY=replace-with-a-long-random-key
-# Optional: comma-separated keys
-# VISTERIA_API_KEYS=key-1,key-2
+# Visteria Environment Variables
+# Copy this file to .env and fill in your values
 
-PORT=8787
-MONGODB_URI=mongodb+srv://<username>:<password>@<cluster-url>/?retryWrites=true&w=majority
+# ===================
+# Frontend (VITE_* prefix exposes to client)
+# ===================
+
+# Your deployed Vercel URL (or localhost for dev)
+VITE_TRACKING_API_BASE_URL=https://your-app.vercel.app
+
+# API key for authenticating tracking requests
+VITE_TRACKING_API_KEY=your-secret-api-key
+
+# Site ID for self-tracking (optional)
+VITE_TRACKING_SITE_ID=Visteria
+
+# ===================
+# Backend (Vercel Functions)
+# ===================
+
+# API key(s) for authentication - same as VITE_TRACKING_API_KEY
+# Can be comma-separated for multiple keys
+VISTERIA_API_KEY=your-secret-api-key
+
+# MongoDB Atlas connection string
+MONGODB_URI=mongodb+srv://user:password@cluster.mongodb.net/
+
+# Database name (default: visteria)
 MONGODB_DB_NAME=visteria
+
+# Collection name (default: visits)
 MONGODB_VISITS_COLLECTION=visits
